# pdac-longitudinal

./: .gitignore  CHANGELOG.md  DATA.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
configs/: example_config.yaml
pdac_longitudinal/: __init__.py  config.py
pdac_longitudinal/analysis/: __init__.py  feature_importance.py
pdac_longitudinal/baselines/: __init__.py  clinical.py
pdac_longitudinal/cli/: __main__.py  analyze.py  evaluate.py  preprocess.py  train.py  verify.py
pdac_longitudinal/data/: __init__.py  augmentation.py  case_discovery.py  clinical_prep.py  longitudinal_dataset.py  registry.py  split.py
pdac_longitudinal/fusion/: __init__.py  token_fusion.py
pdac_longitudinal/losses/: __init__.py  _utils.py  attention_guidance.py  binary.py  survival.py
pdac_longitudinal/models/: __init__.py  cross_timepoint_attention.py  grl.py  longitudinal_model.py  siamese_encoder.py
pdac_longitudinal/preprocess/: __init__.py  anatomy_features.py  cache_pipeline.py  mask_utils.py  preprocessing.py  radiomics_features.py  roi_pipeline.py  roi_rings.py  segmenter.py  vessel_features.py  vessel_tumor_metrics.py
pdac_longitudinal/radiomics/: extractor.py  feature_schema.py  radiomic_feature_cols.json
pdac_longitudinal/registration/: deformable_registration.py
tests/: conftest.py  test_cache_pipeline.py  test_cli.py  test_clinical.py  test_config.py  test_deformable_registration.py  test_features.py  test_grl.py  test_losses.py  test_mask_utils.py  test_metrics.py  test_preprocess_radiomics.py  test_preprocessing.py  test_radiomics.py  test_roi_rings.py  test_siamese_encoder.py  test_split.py  test_token_fusion.py  test_train_step.py
(+10 files in other folders)
